--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-email-autocomplete": "^0.9.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-text-mask": "^5.5.0",
+    "react-toastify": "^9.1.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
