--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@smastrom/react-email-autocomplete": "^0.9.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
