--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "acesso-unificado",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build --base=/acesso-unificado/",
+    "preview": "vite preview",
+    "homepage": "https://app.satc.edu.br"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
