--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-edit-text": "^5.1.0",
     "react-router-dom": "^6.9.0",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-edit-text": "^5.0.1",
     "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
