--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.0",
     "react-router-dom": "^6.9.0",
