--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.9.0",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.1",
