--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-edit-text": "^5.1.0",
     "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.9.0",
+    "react-router-hash-link": "^2.4.3",
     "react-select": "^5.7.2",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.1",
@@ -34,6 +35,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-edit-text": "^5.0.1",
+    "@types/react-router-hash-link": "^2.4.6",
     "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
