--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acesso-unificado",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "babel-plugin-macros": "^3.1.0",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "formik": "^2.2.9",
@@ -33,6 +34,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
