--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acesso-unificado",
-  "version": "1.1.6",
+  "version": "1.2.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
