--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "acesso-unificado",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base=/acesso-unificado/",
-    "build-dev": "tsc && vite build --base=/acesso-unificado-dev/",
+    "build-dev": "tsc && vite build --base=/acesso-unificado-dev/", 
+    "build_description": "Ao buildar, verificar MODE_ENV no .env.production para que iguale o build selecionado",
     "preview": "vite preview",
     "homepage": "https://app.satc.edu.br"
   },
