--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "acesso-unificado",
-  "version": "1.4.3",
+  "version": "1.4.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base=/acesso-unificado/",
-    "build-dev": "tsc && vite build --base=/acesso-unificado-dev/", 
+    "build-dev": "tsc && vite build --base=/acesso-unificado-dev/",
     "build_description": "Ao buildar, verificar MODE_ENV no .env.production para que iguale o build selecionado",
     "preview": "vite preview",
     "homepage": "https://app.satc.edu.br"
@@ -25,6 +25,7 @@
     "react-auth-code-input": "^3.2.1",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.0",
     "react-password-strength-bar": "^0.4.1",
