--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.0",
+    "react-multi-carousel": "^2.8.5",
     "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
