--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acesso-unificado",
-  "version": "1.4.6",
+  "version": "1.4.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -35,6 +35,7 @@
     "react-select": "^5.7.2",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.1",
+    "react-tooltip": "^5.28.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
